--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-i18next": "^11.18.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
