--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "@react-google-maps/api": "^2.12.1",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -15,6 +16,7 @@
     "env-cmd": "^10.1.0",
     "firebase": "^9.9.1",
     "fontsource-roboto": "^4.0.0",
+    "google-map-react": "^2.2.0",
     "husky": "^8.0.1",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
