add auth function

--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 REACT_APP_GOOGLE_MAP_API_KEY = AIzaSyAKNgnnXm1MIuU4GLL2OmPTZo8KkxJtG5E
 REACT_APP_RAPID_API_TRAVEL_API_KEY = 4e8a2a3e5dmshcdb7a141cc9d142p1f2cb6jsn30e88c537dbd
+
+
+REACT_APP_FIREBASE_API_KEY = AIzaSyD7GNwkEzQl635EAbcw4RfZIq_fs2jopeA
+REACT_APP_FIREBASE_AUTH_DOMAIN = dts-production-a843e.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL = https://dts-production-a843e-default-rtdb.asia-southeast1.firebasedatabase.app
+REACT_APP_FIREBASE_PROJECT_ID = dts-production-a843e
+REACT_APP_FIREBASE_STORAGE_BUCKET = dts-production-a843e.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 724893832589
+REACT_APP_FIREBASE_APP_ID = 1:724893832589:web:d95269145447b2536e99c4
